devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiremock-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: wiremock-api.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiremock-api-service
                port:
                  number: 80
